--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
       </div>
       <div class="header-bottom__menu-all">
         <div class="header-bottom__menu-allBtn">
-          <img src="img/svg/locations.svg" alt="" />Все
+          <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            <rect y="7" width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            <rect y="14" width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            </svg>
+          Все
         </div>
         <ul class="header-bottom__menu-all-list">
           <li>Головна сторінка</li>
@@ -69,18 +74,29 @@
         <a href="">О нас</a>
         <a href="">Контакты</a>
       </div>
-      <div class="header-bottom__language">Язык</div>
+      <div class="header-bottom__language">Язык
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1.02235 3.30811C1.13955 3.19094 1.29849 3.12512 1.46422 3.12512C1.62995 3.12512 1.78889 3.19094 1.9061 3.30811L4.99985 6.40186L8.09359 3.30811C8.21147 3.19426 8.36935 3.13127 8.53322 3.13269C8.69709 3.13412 8.85385 3.19985 8.96973 3.31573C9.08561 3.43161 9.15134 3.58836 9.15277 3.75224C9.15419 3.91611 9.09119 4.07399 8.97734 4.19186L5.44172 7.72749C5.32452 7.84466 5.16557 7.91048 4.99985 7.91048C4.83412 7.91048 4.67518 7.84466 4.55797 7.72749L1.02235 4.19186C0.905178 4.07466 0.839355 3.91572 0.839355 3.74999C0.839355 3.58426 0.905178 3.42532 1.02235 3.30811Z" fill="black" fill-opacity="0.75"/>
+          </svg> 
+      </div>
       <div class="header-bottom__currency">
         <img src="img/svg/currency-dollar.svg" alt="" />
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1.02235 3.30811C1.13955 3.19094 1.29849 3.12512 1.46422 3.12512C1.62995 3.12512 1.78889 3.19094 1.9061 3.30811L4.99985 6.40186L8.09359 3.30811C8.21147 3.19426 8.36935 3.13127 8.53322 3.13269C8.69709 3.13412 8.85385 3.19985 8.96973 3.31573C9.08561 3.43161 9.15134 3.58836 9.15277 3.75224C9.15419 3.91611 9.09119 4.07399 8.97734 4.19186L5.44172 7.72749C5.32452 7.84466 5.16557 7.91048 4.99985 7.91048C4.83412 7.91048 4.67518 7.84466 4.55797 7.72749L1.02235 4.19186C0.905178 4.07466 0.839355 3.91572 0.839355 3.74999C0.839355 3.58426 0.905178 3.42532 1.02235 3.30811Z" fill="black" fill-opacity="0.75"/>
+          </svg> 
       </div>
       <div class="header-bottom__notifications">
         <img src="img/svg/notifications.svg" alt="" />
       </div>
       <div class="header-bottom__cabinet-dropdown">
         <div class="header-bottom__cabinet-dropdownBtn">
-          <img src="img/svg/bxs_user.svg" alt="" />
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.25 5.41666C6.25 7.48416 7.9325 9.16666 10 9.16666C12.0675 9.16666 13.75 7.48416 13.75 5.41666C13.75 3.34916 12.0675 1.66666 10 1.66666C7.9325 1.66666 6.25 3.34916 6.25 5.41666ZM16.6667 17.5H17.5V16.6667C17.5 13.4508 14.8825 10.8333 11.6667 10.8333H8.33333C5.11667 10.8333 2.5 13.4508 2.5 16.6667V17.5H16.6667Z" fill="black" fill-opacity="0.24"/>
+            </svg>
           Личный кабинет
-          <img src="img/svg/arrow-down-bold.svg" alt="" />
+          <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.02235 3.30811C1.13955 3.19094 1.29849 3.12512 1.46422 3.12512C1.62995 3.12512 1.78889 3.19094 1.9061 3.30811L4.99985 6.40186L8.09359 3.30811C8.21147 3.19426 8.36935 3.13127 8.53322 3.13269C8.69709 3.13412 8.85385 3.19985 8.96973 3.31573C9.08561 3.43161 9.15134 3.58836 9.15277 3.75224C9.15419 3.91611 9.09119 4.07399 8.97734 4.19186L5.44172 7.72749C5.32452 7.84466 5.16557 7.91048 4.99985 7.91048C4.83412 7.91048 4.67518 7.84466 4.55797 7.72749L1.02235 4.19186C0.905178 4.07466 0.839355 3.91572 0.839355 3.74999C0.839355 3.58426 0.905178 3.42532 1.02235 3.30811Z" fill="black" fill-opacity="0.75"/>
+            </svg>            
         </div>
         <div class="header-bottom__cabinet-dropdown-content">
           <div><img src="img/svg/cabinet-header-menu.svg" alt="" /></div>
@@ -91,6 +107,7 @@
         </div>
       </div>
       <div class="header-bottom__mobile-right-menu">
+        <a class="email" href="#"><img src="img/svg/email.svg" alt=""></a>
         <button>
           <img src="img/svg/search-filled-black.svg" alt="" />
         </button>
@@ -1389,7 +1406,7 @@
 
   <div class="categories-slider-wrapper slider-wrapper-3">
     <section class="splide" id="sliderSellersMob" aria-label="">
-      <div class="splide__arrows slider-arrows1">
+      <div class="splide__arrows slider-arrows1 slider-sellers-arrows">
         <button class="splide__arrow splide__arrow--prev">
           <img src="img/svg/ep_arrow-down-bold.svg" alt="" />
         </button>
