--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
   <div class="header-promotion">
     <div class="header-promotion__content">
-      <a href="#">подробнее <img src="img/svg/arrow-right.svg" alt="/" /></a>
+      <a href="#">подробнее <img src="img/svg/arrow-right2.svg" alt="/" /></a>
       <p>Лорем ипсум</p>
     </div>
   </div>
@@ -112,7 +112,14 @@
           <img src="img/svg/search-filled-black.svg" alt="" />
         </button>
         <a href=""><img src="img/svg/cart.svg" alt="" /></a>
-        <button><img src="img/svg/mobile-menu-filled.svg" alt="" /></button>
+        <button>
+          <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            <rect y="7" width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            <rect y="14" width="18" height="3" rx="1.5" fill="black" fill-opacity="0.24"/>
+            </svg>            
+          <!-- <img src="img/svg/mobile-menu-filled.svg" alt="" /> -->
+        </button>
       </div>
       <div class="categories-mobile">
         <div class="menu-shadow">
@@ -201,7 +208,7 @@
                     <a href="">
                         <img class="test" src="img/hero/girl-hero.png" alt="">
                         <div class="hero__bottom-grid-content item1">
-                            <p>Лорем_<br>ипсум_<br> долор</p>
+                            <p><span>Лорем</span><br><span>ипсум</span><br> долор</p>
                             <a href="#">подробнее</a>
                         </div>
                     </a>
@@ -237,7 +244,7 @@
                                 <a href="">
                                     <div class="slider-mobile1__slide-content">
                                          <img class="" src="img/hero/girl-slider-mobile.png" alt="">
-                                         <p>Лорем_<br>ипсум_<br> долор</p>
+                                         <p><span>Лорем</span><br><span>ипсум</span><br>долор</p>
                                          <p>подробнее</p>   
                                     </div>
                                 </a>
@@ -260,6 +267,7 @@
                                    </div>
                                 </a>
                               </li>
+                              
                           </ul>
                     </div>
                   </section>
@@ -1233,13 +1241,13 @@
               <div class="mobile-category-item__img">
                 <img src="img/products/unicorn.png" alt="" />
               </div>
-              <div>Категория</div>
+              <div>Еще одна категория</div>
             </a>
             <a href="#">
               <div class="mobile-category-item__img">
                 <img src="img/products/fruits.png" alt="" />
               </div>
-              <div>Категория</div>
+              <div>Другая атегория</div>
             </a>
           </li>
           <li class="splide__slide mobile-category-item">
@@ -1292,7 +1300,7 @@
   <!-- ===========================================SLIDER3 -->
 
   <div class="categories-slider-wrapper slider-wrapper-3">
-    <div class="popular-categories__heading">Популярные продавцы</div>
+    <div class="popular-categories__heading heading-3">Популярные продавцы</div>
     <section class="splide" id="sliderSellers" aria-label="">
       <div class="splide__arrows slider-arrows1">
         <button class="splide__arrow splide__arrow--prev">
@@ -2709,7 +2717,9 @@
               <img src="img/best-choise/JBL/JBL3.png" alt="" />
             </div>
             <div class="best-choice__content-right">
-              <img src="img/best-choise/JBL/JBL-big.png" alt="" />
+              <div class="img-wrapper">
+                <img src="img/best-choise/JBL/JBL-big.png" alt="" />
+              </div>
               <img src="img/svg/5stars.svg" alt="" />
               <p class="best-choice__item-name">
                 Смартфон Apple iPhone 13 128GB blue
