--- a/real-pages.html
+++ b/real-pages.html
@@ -43,6 +43,18 @@
         <a href="/for_customers.html">для покупателей</a>
         <a href="/seller-page__empty.html">страница продавца</a>
         <a href="/support_send_message.html">поддержка</a>
+        <a href="/seller-page__ads.html">реклама товаров</a>
+        <a href="/seller-page__analitycs.html">аналитика продаж</a>
+        <a href="/my-items.html">мои продажи</a>
+        <a href="/vozvrat_obmen.html">возврат/обмен</a>
+        <a href="/vozvrat_obmen_empty.html">возврат/обмен - пусто</a>
+        <a href="/vozvrat_obmen_period_empty.html">возврат/обмен за выбранный период - пусто</a>
+        <a href="/create_item.html">создать обьявление</a>
+        <a href="/seller-page__payments.html">мои платежи</a>
+        <a href="/create-item__info.html">создание товара - информация о товаре</a>
+        <a href="/moi-tovary.html">мои товары</a>
+        <a href="/seller-page__delivery.html">Создание объявления усл. дост</a>
+        <a href="/seller-page__discount.html">Создание объявления скидки</a>
     </div>
   </body>
 </html>
