--- a/seller-page__ads.html
+++ b/seller-page__ads.html
@@ -290,7 +290,6 @@
               </button>
             </form>
           </div>
-          
         </div>
       </div>
 
@@ -304,22 +303,26 @@
             <div class="user-page__left-menu-avatar">
               <form class="change-avatar change-avatar-hidden" action="">
                 <div class="change-avatar__img">
-                  <img src="img/users/add-photo.png" alt="">
+                  <img src="img/users/add-photo.png" alt="" />
                 </div>
-                <input id="avatar-input" type="file" name="avatar">
+                <input id="avatar-input" type="file" name="avatar" />
                 <label for="avatar-input">Загрузить фото</label>
                 <button type="submit">Сохранить</button>
                 <div class="close-change-avatar">Отмена</div>
               </form>
               <div class="user-page__left-menu-avatar-wrapper">
-                <img class="user-page__left-menu-avatar-img" src="img/users/user-cabinet.png" alt="" />
+                <img
+                  class="user-page__left-menu-avatar-img"
+                  src="img/users/user-cabinet.png"
+                  alt=""
+                />
               </div>
               <div class="user-page__left-menu-avatar-info">
                 <p>Олег Коваленко-Ковальчук</p>
                 <p>elektronnaya.poshta@gmail.com</p>
               </div>
               <div class="user-page__left-menu-avatar-mobile-btn">
-                <img src="img/svg/arrow-down-bold.svg" alt="">
+                <img src="img/svg/arrow-down-bold.svg" alt="" />
               </div>
             </div>
             <ul class="user-page__left-menu-nav hidden-left-menu-nav">
@@ -355,19 +358,25 @@
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-sales-analitycs"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sales-analitycs"
+                  ></div>
                   <p>Аналитика продаж</p>
                 </a>
               </li>
               <li>
                 <a href="/user_page_zaprosi.html">
-                  <div class="user-page__left-menu-nav-img seller-sold-goods"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sold-goods"
+                  ></div>
                   <p>Проданные товары</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-return-exchange"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-return-exchange"
+                  ></div>
                   <p>Возврат/Обмен</p>
                 </a>
               </li>
@@ -379,13 +388,17 @@
               </li>
               <li>
                 <a href="/user_page_pay_for_friend.html">
-                  <div class="user-page__left-menu-nav-img seller-payments"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-payments"
+                  ></div>
                   <p>Платежи</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-become-customer"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-become-customer"
+                  ></div>
                   <p>Стать покупателем</p>
                 </a>
               </li>
@@ -394,7 +407,62 @@
           </div>
 
           <div class="user-page__right-side">
-            <img class="user-page__right-side-empty-img" src="img/users/user-page-empty.png" alt="">
+            <div class="choose-ad">
+              <div class="choose-ad__item">
+                <div class="choose-ad__item-top adv-1">
+                  <p>Google Ads</p>
+                  <p>4800 грн. - 3 мес.</p>
+                </div>
+                <div class="choose-ad__item-bot adv-bot-1">
+                  <div>
+                    <p>Дата подключения: <span>25.08.2023</span></p>
+                    <p>Осталось дней: <span>67</span></p>
+                  </div>
+                  <p class="choose-ad__item-bot-descr">
+                    Усу ет аудире бонорум дефинитионес. Сед ан еним вирис
+                    опортере, нумяуам дигниссим не яуи. Ад бландит ассуеверит
+                    иус. Аетерно ерудити еу нам, яуандо нусяуам инструцтиор про
+                    ет. Те новум аетерно диспутандо при.
+                  </p>
+                </div>
+              </div>
+              <div class="choose-ad__item">
+                <div class="choose-ad__item-top adv-2">
+                  <p>Baskon</p>
+                  <p>2500 грн. - 3 мес.</p>
+                </div>
+                <div class="choose-ad__item-bot adv-bot-2">
+                  <div>
+                    <p>Дата подключения: <span>25.08.2023</span></p>
+                    <p>Осталось дней: <span>67</span></p>
+                  </div>
+                  <p class="choose-ad__item-bot-descr">
+                    Усу ет аудире бонорум дефинитионес. Сед ан еним вирис
+                    опортере, нумяуам дигниссим не яуи. Ад бландит ассуеверит
+                    иус. Аетерно ерудити еу нам, яуандо нусяуам инструцтиор про
+                    ет. Те новум аетерно диспутандо при.
+                  </p>
+                </div>
+              </div>
+              <div class="choose-ad__item">
+                <div class="choose-ad__item-top adv-3">
+                  <p>Facebook</p>
+                  <p>6000 грн. - 3 мес.</p>
+                </div>
+                <div class="choose-ad__item-bot adv-bot-3">
+                  <div>
+                    <p>Дата подключения: <span>25.08.2023</span></p>
+                    <p>Осталось дней: <span>67</span></p>
+                  </div>
+                  <p class="choose-ad__item-bot-descr">
+                    Усу ет аудире бонорум дефинитионес. Сед ан еним вирис
+                    опортере, нумяуам дигниссим не яуи. Ад бландит ассуеверит
+                    иус. Аетерно ерудити еу нам, яуандо нусяуам инструцтиор про
+                    ет. Те новум аетерно диспутандо при.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -487,6 +555,6 @@
       type="module"
       src="js/splide-4.1.3/splide-4.1.3/dist/js/splide.min.js"
     ></script>
-    <script type="module" src="/js/cabinet.js"></script>
+    <script type="module" src="/js/choose-ad.js"></script>
   </body>
 </html>
