--- a/seller-page__analitycs.html
+++ b/seller-page__analitycs.html
@@ -290,7 +290,6 @@
               </button>
             </form>
           </div>
-          
         </div>
       </div>
 
@@ -304,22 +303,26 @@
             <div class="user-page__left-menu-avatar">
               <form class="change-avatar change-avatar-hidden" action="">
                 <div class="change-avatar__img">
-                  <img src="img/users/add-photo.png" alt="">
+                  <img src="img/users/add-photo.png" alt="" />
                 </div>
-                <input id="avatar-input" type="file" name="avatar">
+                <input id="avatar-input" type="file" name="avatar" />
                 <label for="avatar-input">Загрузить фото</label>
                 <button type="submit">Сохранить</button>
                 <div class="close-change-avatar">Отмена</div>
               </form>
               <div class="user-page__left-menu-avatar-wrapper">
-                <img class="user-page__left-menu-avatar-img" src="img/users/user-cabinet.png" alt="" />
+                <img
+                  class="user-page__left-menu-avatar-img"
+                  src="img/users/user-cabinet.png"
+                  alt=""
+                />
               </div>
               <div class="user-page__left-menu-avatar-info">
                 <p>Олег Коваленко-Ковальчук</p>
                 <p>elektronnaya.poshta@gmail.com</p>
               </div>
               <div class="user-page__left-menu-avatar-mobile-btn">
-                <img src="img/svg/arrow-down-bold.svg" alt="">
+                <img src="img/svg/arrow-down-bold.svg" alt="" />
               </div>
             </div>
             <ul class="user-page__left-menu-nav hidden-left-menu-nav">
@@ -355,19 +358,25 @@
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-sales-analitycs"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sales-analitycs"
+                  ></div>
                   <p>Аналитика продаж</p>
                 </a>
               </li>
               <li>
                 <a href="/user_page_zaprosi.html">
-                  <div class="user-page__left-menu-nav-img seller-sold-goods"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sold-goods"
+                  ></div>
                   <p>Проданные товары</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-return-exchange"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-return-exchange"
+                  ></div>
                   <p>Возврат/Обмен</p>
                 </a>
               </li>
@@ -379,13 +388,17 @@
               </li>
               <li>
                 <a href="/user_page_pay_for_friend.html">
-                  <div class="user-page__left-menu-nav-img seller-payments"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-payments"
+                  ></div>
                   <p>Платежи</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-become-customer"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-become-customer"
+                  ></div>
                   <p>Стать покупателем</p>
                 </a>
               </li>
@@ -393,8 +406,98 @@
             <a href="/" class="logout hidden-logout">Выйти</a>
           </div>
 
-          <div class="user-page__right-side">
-            <img class="user-page__right-side-empty-img" src="img/users/user-page-empty.png" alt="">
+          <div class="user-page__right-side analitycs-page">
+            <h2>Аналитика продаж</h2>
+            <div class="circle-diagrams">
+              <div>
+                <img src="img/circle-diagram-1.png" alt="" />
+                <p>Проданные - 150</p>
+                <p>Не проданные - 50</p>
+              </div>
+              <div>
+                <img src="img/circle-diagram-2.png" alt="" />
+                <p>Отмененные - 9</p>
+              </div>
+              <div>
+                <img src="img/circle-diagram-3.png" alt="" />
+                <p>Возврат/Обмен - 2</p>
+              </div>
+            </div>
+            <div class="diagrams-views-payment">
+              <div class="diagrams-views-payment__diagram">
+                <img src="img/diagram-month.png" alt="" />
+                <div>
+                  <div class="square-orange"></div>
+                  <p>Просмотры - 63</p>
+                </div>
+              </div>
+              <div class="diagrams-views-payment__diagram">
+                <img src="img/diagram-payment.png" alt="" />
+                <div>
+                  <div class="square-orange"></div>
+                  <p>PayPal - 65%</p>
+                </div>
+                <div>
+                  <div class="square-purple"></div>
+                  <p>
+                    Банковские карты <br />
+                    - 25%
+                  </p>
+                </div>
+                <div>
+                  <div class="square-lightPurple"></div>
+                  <p>Криптовалюта - 10%</p>
+                </div>
+              </div>
+              <div class="diagrams-views-payment__diagram">
+                <img src="img/doagram-countries.png" alt="" />
+                <div>
+                  <div class="square-orange"></div>
+                  <p>Украина - 62%</p>
+                </div>
+                <div>
+                  <div class="square-yellow"></div>
+                  <p>США - 3%</p>
+                </div>
+                <div>
+                  <div class="square-lightPurple"></div>
+                  <p>Нидерланды - 15%</p>
+                </div>
+                <div>
+                  <div class="square-purple"></div>
+                  <p>Польша - 20%</p>
+                </div>
+              </div>
+            </div>
+            <div class="graphic">
+              <img src="img/Chart.png" alt="">
+              <ul>
+                <li>
+                  <div></div>
+                  <p>Добавили в корзину - 163</p>
+                </li>
+                <li>
+                  <div></div>
+                  <p>Добавили в избранное - 125</p>
+                </li>
+                <li>
+                  <div></div>
+                  <p>Добавили в сравнения - 35</p>
+                </li>
+                <li>
+                  <div></div>
+                  <p>Просмотр отзывов - 435</p>
+                </li>
+                <li>
+                  <div></div>
+                  <p>Просмотр фото - 523</p>
+                </li>
+                <li>
+                  <div></div>
+                  <p>Переход на другую страницу - 462</p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -487,6 +590,6 @@
       type="module"
       src="js/splide-4.1.3/splide-4.1.3/dist/js/splide.min.js"
     ></script>
-    <script type="module" src="/js/cabinet.js"></script>
+    <script type="module" src="/js/choose-ad.js"></script>
   </body>
 </html>
