--- a/moi-tovary.html
+++ b/moi-tovary.html
@@ -290,7 +290,6 @@
               </button>
             </form>
           </div>
-          
         </div>
       </div>
 
@@ -304,22 +303,26 @@
             <div class="user-page__left-menu-avatar">
               <form class="change-avatar change-avatar-hidden" action="">
                 <div class="change-avatar__img">
-                  <img src="img/users/add-photo.png" alt="">
+                  <img src="img/users/add-photo.png" alt="" />
                 </div>
-                <input id="avatar-input" type="file" name="avatar">
+                <input id="avatar-input" type="file" name="avatar" />
                 <label for="avatar-input">Загрузить фото</label>
                 <button type="submit">Сохранить</button>
                 <div class="close-change-avatar">Отмена</div>
               </form>
               <div class="user-page__left-menu-avatar-wrapper">
-                <img class="user-page__left-menu-avatar-img" src="img/users/user-cabinet.png" alt="" />
+                <img
+                  class="user-page__left-menu-avatar-img"
+                  src="img/eagle-avatar.png"
+                  alt=""
+                />
               </div>
               <div class="user-page__left-menu-avatar-info">
                 <p>Олег Коваленко-Ковальчук</p>
                 <p>elektronnaya.poshta@gmail.com</p>
               </div>
               <div class="user-page__left-menu-avatar-mobile-btn">
-                <img src="img/svg/arrow-down-bold.svg" alt="">
+                <img src="img/svg/arrow-down-bold.svg" alt="" />
               </div>
             </div>
             <ul class="user-page__left-menu-nav hidden-left-menu-nav">
@@ -355,19 +358,25 @@
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-sales-analitycs"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sales-analitycs"
+                  ></div>
                   <p>Аналитика продаж</p>
                 </a>
               </li>
               <li>
                 <a href="/user_page_zaprosi.html">
-                  <div class="user-page__left-menu-nav-img seller-sold-goods"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-sold-goods"
+                  ></div>
                   <p>Проданные товары</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-return-exchange"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-return-exchange"
+                  ></div>
                   <p>Возврат/Обмен</p>
                 </a>
               </li>
@@ -379,13 +388,17 @@
               </li>
               <li>
                 <a href="/user_page_pay_for_friend.html">
-                  <div class="user-page__left-menu-nav-img seller-payments"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-payments"
+                  ></div>
                   <p>Платежи</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="user-page__left-menu-nav-img seller-become-customer"></div>
+                  <div
+                    class="user-page__left-menu-nav-img seller-become-customer"
+                  ></div>
                   <p>Стать покупателем</p>
                 </a>
               </li>
@@ -393,8 +406,133 @@
             <a href="/" class="logout hidden-logout">Выйти</a>
           </div>
 
-          <div class="user-page__right-side">
-            <img class="user-page__right-side-empty-img" src="img/users/user-page-empty.png" alt="">
+          <div class="user-page__right-side moi-tovary">
+            <h2>Мои товары</h2>
+            <div class="moi-tovary__diagrams-section">
+                <div class="moi-tovary__diagrams">
+                    <div>
+                        <img src="img/svg/diagram-tovary-1.svg" alt="">
+                        <p>Активные</p>
+                    </div>
+                    <div>
+                        <img src="img/svg/diagram-tovary-2.svg" alt="">
+                        <p>Проданные</p>
+                    </div>
+                    <div>
+                        <img src="img/svg/diagram-tovary-3.svg" alt="">
+                        <p>Возврат/Обмен</p>
+                    </div>
+                </div>
+                <button>Разместить товар</button>
+            </div>
+            <div class="moi-tovary__nav-buttons">
+                <button>Все</button>
+                <button>Со скидкой</button>
+                <button>Активные</button>
+                <button>Неактивные</button>
+            </div>
+            <div class="moi-tovary__tablet">
+                <form action="">
+                    <div class="catalogue__filter-delivery-checkbox-item">
+                        <label class="catalogue__checkbox-label-delivery1 moi-tovary" for="delivery1">Выбрать все</label>
+                        <input class="catalogue__checkbox-delivery1 visually-hidden-checkbox moi-tovary" type="checkbox" id="delivery1">
+                    </div>
+                    <button class="delete-button">
+                        Удалить 
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.3327 3.6665L3.66602 10.3332M10.3327 10.3332L3.66602 3.6665L10.3327 10.3332Z" stroke="#737373" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            
+                    </button>
+                    <select>
+                        <option value="hurr">За последние 30 дней</option>
+                        <option value="durr">За последние 30 дней</option>
+                    </select>
+                    <div class="moi-tovary__tablet-searchbar">
+                        <input type="text" placeholder="Поиск товаров">
+                        <button>Найти</button>
+                    </div>
+                </form>
+                <div class="moi-tovary__tablet-heading">
+                    <div>
+                        <img src="img/svg/empty-image-no-border.svg" alt="">
+                    </div>
+                    <p>Название товара</p>
+                    <p>Дата</p>
+                    <p>Код товара</p>
+                    <p>Статус</p>
+                    <p>Цена</p>
+                    <p>Заказы</p>
+                </div>
+                <ul class="moi-tovary__tablet-items">
+                    <li>
+                        <div>
+                          <div class="catalogue__filter-brand-checkbox-item moi-tovary">
+                            <input class="catalogue__checkbox-brand1 visually-hidden-checkbox moi-tovary" type="checkbox" id="brand1">
+                            <label class="catalogue__checkbox-label-brand1" for="brand1"></label>
+                          </div>
+                          <img src="img/vozvrat1.png" alt="">
+                        </div>
+                        <div>
+                            <p class="hidden-title">Название</p>
+                            <p>Смартфон Apple iPhone 13 128...</p>
+                        </div>
+                        <div>
+                            <p class="hidden-title">Дата</p>
+                            <p>30.03.2023</p>
+                        </div>
+                        <div>
+                            <p class="hidden-title">Код товара</p>
+                            <p>1035065624565465</p>
+                        </div>
+                        <div>
+                            <p class="hidden-title">Статус</p>
+                            <p>Неактивен</p>
+                        </div>
+                        <div>
+                            <p class="hidden-title">Цена</p>
+                            <p>330 0090</p>
+                        </div>
+                        <div>
+                            <p class="hidden-title">Заказы</p>
+                            <p>1 330 0090</p>
+                        </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="catalogue__filter-brand-checkbox-item moi-tovary">
+                          <input class="catalogue__checkbox-brand1 visually-hidden-checkbox moi-tovary" type="checkbox" id="brand1">
+                          <label class="catalogue__checkbox-label-brand1" for="brand1"></label>
+                        </div>
+                        <img src="img/vozvrat1.png" alt="">
+                      </div>
+                      <div>
+                          <p class="hidden-title">Название</p>
+                          <p>Смартфон Apple iPhone 13 128...</p>
+                      </div>
+                      <div>
+                          <p class="hidden-title">Дата</p>
+                          <p>30.03.2023</p>
+                      </div>
+                      <div>
+                          <p class="hidden-title">Код товара</p>
+                          <p>1035065624565465</p>
+                      </div>
+                      <div>
+                          <p class="hidden-title">Статус</p>
+                          <p>Неактивен</p>
+                      </div>
+                      <div>
+                          <p class="hidden-title">Цена</p>
+                          <p>330 0090</p>
+                      </div>
+                      <div>
+                          <p class="hidden-title">Заказы</p>
+                          <p>1 330 0090</p>
+                      </div>
+                  </li>
+                </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -487,6 +625,6 @@
       type="module"
       src="js/splide-4.1.3/splide-4.1.3/dist/js/splide.min.js"
     ></script>
-    <script type="module" src="/js/cabinet.js"></script>
+    <script type="module" src="/js/choose-ad.js"></script>
   </body>
 </html>
